Added spec file for handler
