# handler/CreateEvent.go
@@ -10,6 +10,15 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary Create event
+// @Schemes
+// @Description Create event after logging in
+// @Tags example
+// @Accept json
+// @Produce json
+// @Param order body model.EventAdd true "Create Event"
+// @Success 200 {string} Event Created Successfully
+// @Router /createEvent [post]
 func CreateEvent(c *gin.Context) {
 	var eventAdd model.EventAdd
 	if err := c.ShouldBindJSON(&eventAdd); err != nil {
@@ -18,7 +27,6 @@ func CreateEvent(c *gin.Context) {
 	}
 	key, _ := c.Get("id")
 	val := auth.Convert(key)
-	// fmt.Println(val)
 	err := service.ValidateEvent(eventAdd, val)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
@@ -28,5 +36,9 @@ func CreateEvent(c *gin.Context) {
 	if err != nil {
 		fmt.Println(err)
 	}
+	// err = service.SyncToCalendar(val, eventAdd)
+	// if err != nil {
+	// 	fmt.Println(err)
+	// }
 	c.JSON(http.StatusCreated, gin.H{"success": "Event added successfully"})
 }
