# handler/FindEvent.go
@@ -7,6 +7,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary Get event
+// @Schemes
+// @Description Get list of all event after logging in
+// @Tags example
+// @Accept json
+// @Produce json
+// @Success 200 {string} All Events
+// @Router /events [get]
 func FindEvent(c *gin.Context) {
 	res, err := service.GetAllEvent()
 	if err != nil {
